# proofgate

./: LICENSE  README.md  pyproject.toml
corpus/: manifest.json
corpus/alignment/: aligned_simple.lean  misaligned_missing_hyp.lean
corpus/faithfulness/: bad_fresh_axiom.lean  bad_hidden_sorry.lean  bad_native_decide.lean  bad_sorry.lean  good_classical.lean  good_rfl.lean
corpus/vacuity/: vacuous_ex_falso.lean  vacuous_trivial.lean
proofgate/: __init__.py  cli.py  corpus_runner.py  metric.py  report.py
proofgate/checks/: __init__.py  alignment.py  axioms.py  negation.py  tactics.py
proofgate/kernel/: __init__.py  lean_runner.py
proofgate/loaders/: __init__.py  deepseek.py  goedel.py  kimina.py  types.py
reports/: alignment_audit.json  static_audit.json  synthetic.json
reports/batched/: _combined_summary.json  deepseek-prover-v2-test.json  deepseek-prover-v2-test.stdout.txt  deepseek-prover-v2-valid.json  deepseek-prover-v2-valid.stdout.txt  kimina-prover-72b-test.json  kimina-prover-72b-test.stdout.txt
reports/combined/: _summary.json  _summary.md  deepseek-prover-v2-test.json  deepseek-prover-v2-valid.json  goedel-prover-v2-test.json  kimina-prover-72b-test.json
scripts/: alignment_audit.py  batch_audit.py  combined_report.py  download_artifacts.sh  repin_mathlib.sh  run_audit.sh  setup_lake_projects.sh  static_audit.py
