[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proofgate"
version = "0.1.0"
description = "Reproducible audit of faithfulness, alignment, and vacuity in Lean 4 theorem provers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anonymous Submission"}]
dependencies = [
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
alignment = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.4"]

[project.scripts]
proofgate = "proofgate.cli:main"

[tool.setuptools.packages.find]
include = ["proofgate*"]
